# Kinect-Object-Cognition

./: .gitignore  AllLabels.txt  Pipfile.example  Set2Labels.txt  autogen.txt  capture_train_img.py  capture_train_set.py  capture_train_set_multi.py  cv-demo.py  obj_recogniser.py  objdetection.py  objdetection2.py  objdetection3.py  pyproject.toml  readme.md  run_obj_recognition.py  test_run.py
