[tool.poetry]
name = "object-recognition"
version = "0.1.0"
description = ""
authors = ["Jack Lau <jack.lau@student.reading.ac.uk>"]

[tool.poetry.dependencies]
python = ">=3.7"
opencv-python = "~=4.5.1"
scipy = "~=1.6.1"
scikit-learn = "~=0.24.1"
matplotlib = "^3.4.0"
pandas = "*"
seaborn = "*"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
